# T564A_SmartCalendar

./: .env.example  .gitignore  ALL_DAY_EVENTS_FIX.md  APPLE_CALENDAR_INTEGRATION.md  CANVAS_COURSE_FILTER_FIX.md  CANVAS_GOOGLE_SYNC_SEPARATION.md  CANVAS_SYNC_FIX.md  COURSE_FILTER_LOGIC.md  DELETE_DUPLICATES_GUIDE.md  EVENT_DELETION_GUIDE.md  FOUR_NEW_FEATURES.md  GOOGLE_CALENDAR_HOLIDAYS_NOTE.md  IMPLEMENTATION_ROADMAP.md  OPENAI_API_KEY_SETUP.md  OUTLOOK_CALENDAR_SETUP.md  QUICK_START.md  README.md  SLOT_SUGGESTION_GUIDELINES.md  SMART_ACTIVITY_GUIDE.md  SMART_ADD_GUIDE.md  THREE_FIXES_SUMMARY.md  TIME_GRID_IMPLEMENTATION.md  TROUBLESHOOTING_CALENDAR.md  UI_FIX_SUMMARY.md  UI_IMPROVEMENTS.md  UI_REDESIGN.md  cleanup_duplicates.py  cleanup_synced_events.py  config.example.yaml  config.yaml  delete_duplicates.py  pyproject.toml  railway.json  requirements.txt  start.sh
app/: main.py
app/api/: __init__.py  handlers.py
app/static/: app.js  event_import_template.csv  index.html  styles.css  styles.css.bak
core/: config.py  logging.py  models.py  session.py  time_utils.py  user_config.py
docs/: architecture.md
services/: google_calendar.py  ingestion.py  recurrence.py  voice.py
tests/: __init__.py
